--- a/index.html
+++ b/index.html
@@ -12,13 +12,10 @@
         <a href="index.html">
             <h2 class="logo">Portfolio</h2>
         </a>
-        <!-- <a href="index.html"><h2 style="color:blueviolet;">Portfolio Starter</h2></a> -->
 
         <nav>
-            <!-- <a href="about.html">About Me</a>
-            <a href="contact.html">Contact Me</a> -->
-            <a href="#work">About Me</a>
-            <a href="#footer">Work</a>
+            <a href="#about-me">About Me</a>
+            <a href="#work">Work</a>
             <a href="#footer">Contact Me</a>
         </nav>
     </header>
@@ -30,41 +27,43 @@
 
         <section class="dog-text">
             <h1>Alice Ayres</h1>
-            <p>I build cool stuff. Call me.</p>
+            <p>Web Developer</p>
         </section>
     </figure>
+
+    <h1 class="work-title main-color">About Me</h1>
+    <article id="about-me">
+        <section>
+            <P>Alice is an aspiring web developer looking to optimize every aspect about your internet life.</P>
+        </section>
+    </article>
 
     <h1 class="work-title main-color">My Work</h1>
 
     <main id="work">
         <section class="main-section">
-            <img src="./assets/images/duck-image.jpg" alt="duck">
-            <P>Paragraph</P>
+            <img src="./assets/images/Portfolio1.png" alt="duck">
+            <h2 class="first-work">Paragraph</h2>
         </section>
 
-        <section>
-            <img src="./assets/images/duck-image.jpg" alt="duck">
-            <P>Paragraph</P>
-            <P>Paragraph</P>
-            <P>Paragraph</P>
+        <section class="even-section">
+            <img src="./assets/images/placeholder.png" alt="duck">
+            <h2 class="even-work">Paragraph</h2>
         </section>
 
-        <section>
-            <P>Paragraph</P>
-            <P>Paragraph</P>
-            <P>Paragraph</P>
+        <section class="odd-section">
+            <img src="./assets/images/placeholder.png" alt="duck">
+            <h2 class="odd-work">Paragraph</h2>
         </section>
 
-        <section>
-            <P>Paragraph</P>
-            <P>Paragraph</P>
-            <P>Paragraph</P>
+        <section class="even-section">
+            <img src="./assets/images/placeholder.png" alt="duck">
+            <h2 class="even-work">Paragraph</h2>
         </section>
 
-        <section>
-            <P>Paragraph</P>
-            <P>Paragraph</P>
-            <P>Paragraph</P>
+        <section class="odd-section">
+            <img src="./assets/images/placeholder.png" alt="duck">
+            <h2 class="odd-work">Paragraph</h2>
         </section>
     </main>
 
@@ -73,9 +72,18 @@
     </div> -->
 
     <footer id="footer">
-        <p>&copy; 2024</p>
+        <h1 class="work-title main-color">Contact Me</h1>
+        <section class="contact">
+            <h3>555-555-5555</h3>
+            <h3>placeholder@test.com</h3>
+            <a href="https://github.com/Neppit"><h3>Github</h3></a>
+            <a href="https://twitter.com/"><h3>Twitter</h3></a>
+        </section>
+        <section class="bottom">
+            <p>&copy; 2024</p>
 
-        <p>Developed by Alice Ayres</p>
+            <p>Developed by Alice Ayres</p>
+        </section>
     </footer>
 </body>
 
